# rusty-element

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  py_clean.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run-tests.yml
python/: setup.py
python/rusty_element/: __init__.py  config.py  reference_cell.py
python/test/: test_import.py
rust/: Cargo.toml
rust/src/: cell.rs  lib.rs
rust/src/cell/: triangle.rs
rusty_element/: __init__.py
src/: c_api.rs  cell.rs  element.rs  lib.rs  map.rs
src/cell/: cells_1d.rs  cells_2d.rs  cells_3d.rs  triangle.rs
src/element/: lagrange.rs
test/: test.py  test_add.py
