[package]
name = "rusty-element"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scroggs <matthew.w.scroggs@gmail.com>"]
description = "A library for the evaluation of finite element basis functions."
license = "BSD-3-Clause"
homepage = "https://github.com/rusty-fast-solvers/rusty-element"
repository = "https://github.com/rusty-fast-solvers/rusty-element"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "rusty_element"
crate-type = ["lib", "cdylib"]

[dependencies]
rusty-cffi = {path = "/Users/betcke/projects/rusty-cffi"}
# rusty-cffi = {git = "https://github.com/rusty-fast-solvers/rusty-cffi"}
paste = "1.*"
libc = "0.2"